--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     --h1size: clamp(24px, 3vw, 128px);
     --h2size: clamp(18px, 2vw, 96px);
     --anta: "Anta", sans-serif; 
-
-
+    --bgColor: rgb(50, 50, 50);
+    --popupBgColor: rgb(70, 70, 70);
 
     --rainFallDuration: 500ms;
   }
@@ -17,7 +17,7 @@
 .container{
     width: 100vw;
     height: 100vh;
-    background-color: rgb(50, 50, 50);
+    background-color: var(--bgColor);
     display: grid;
     grid-template-rows: 1fr 20vh;
     grid-template-columns: 1fr;
@@ -59,7 +59,7 @@
 .drop{
     width: clamp(1px, 0.5vh, 2px);
     height: clamp(4px, 12vh, 200px);
-    background-color: rgba(255, 255, 255, .5);
+    background-color: rgb(255, 255, 255);
     position: absolute;
     animation: fall var(--rainFallDuration) forwards;
 }
@@ -70,10 +70,40 @@
         opacity: 0.5;
     }
     10%{
-        opacity: 1;
+        opacity: 0.7;
     }
     100%{
         transform: translate(0, 110vh);
         opacity: 0;
     }
+}
+
+.popupResolution{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+}
+
+.popup{
+    position: absolute;
+    aspect-ratio: 16 / 9;
+    width: 80vw;
+    z-index: 2;
+    background-color: var(--popupBgColor);
+    border-radius: 5px;
+    opacity: 0.9;
+}
+
+.popupTemplate{
+    display: grid;
+    grid-template-rows: 4vh 1fr;
+    grid-template-columns: 96% 1fr;
+    
+}
+
+.squareButton{
+    aspect-ratio: 1 / 1;
+    width: 100%;
 }
