--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
 :root {
     --h1size: clamp(24px, 3vw, 128px);
     --h2size: clamp(18px, 2vw, 96px);
-    --anta: "Anta", sans-serif; 
+    --displayFont: "Anta", sans-serif; 
+    --titleFont: "Roboto", sans-serif;
+    --textFont: rgb(255,255,255);
     --bgColor: rgb(50, 50, 50);
     --popupBgColor: rgb(70, 70, 70);
-
+    --popupDuration: 500ms;
     --rainFallDuration: 500ms;
+    --numOfButtons: 3;
   }
 
 *{
     margin: 0;
     padding: 0;
-    user-select: none; /* Standard syntax */
+    user-select: none; 
+}
+
+button{
+    cursor: pointer;
+}
+
+.squareButton{
+    aspect-ratio: 1 / 1;
 }
 
 .container{
@@ -19,11 +30,12 @@
     height: 100vh;
     background-color: var(--bgColor);
     display: grid;
-    grid-template-rows: 1fr 20vh;
-    grid-template-columns: 1fr;
+    /* grid-template-rows: 1fr 20vh; */
+    grid-template-columns: 1fr calc(var(--numOfButtons) * 5.5vw);
     position: absolute;
 }
 
+/* #region time */
 .time{
     width: 100%;
     display: flex;
@@ -35,9 +47,9 @@
 
 .time-font{
     display: block;
-    font-family: var(--anta);
+    font-family: var(--displayFont);
     padding-left: 1vw;
-    color: white;
+    color: var(--textFont);
 }
 
 #cur_time{
@@ -47,12 +59,15 @@
 #cur_date{
     font-size: var(--h2size);
 }
+/* #endregion */
 
+/* #region rain */
 .rain{
     width: 100vw;
     height: 100vh;
     position: absolute;
-    overflow:hidden;
+    overflow: hidden;
+    pointer-events: none; /* Makes it so you can click stuff behind this layer */
     z-index: 1;
 }
 
@@ -77,7 +92,9 @@
         opacity: 0;
     }
 }
+/* #endregion */
 
+/* #region popup */
 .popupResolution{
     display: flex;
     align-items: center;
@@ -89,21 +106,95 @@
 .popup{
     position: absolute;
     aspect-ratio: 16 / 9;
-    width: 80vw;
     z-index: 2;
     background-color: var(--popupBgColor);
     border-radius: 5px;
-    opacity: 0.9;
+    border-width: 2px;
+    border-style: solid;
+    box-shadow: 0px 10px 25px 0px rgb(0,0,0);
+    width: clamp(10vh, min(calc(90vh + 600px), 90vw), 80vw);
+}
+
+#popupGrid{
+    display: grid;
+    grid-template-rows: 8vh 1fr;
 }
 
 .popupTemplate{
     display: grid;
-    grid-template-rows: 4vh 1fr;
-    grid-template-columns: 96% 1fr;
-    
+    grid-template-columns: 80% 1fr;
 }
 
-.squareButton{
-    aspect-ratio: 1 / 1;
+#popupClose{
+    display: flex;
+    justify-self: flex-end;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: clamp(24px, 3rem, 72px);
+    background-color: rgba(0, 0, 0, 0);
+    font-family: var(--titleFont);
+    border: none;
+    font-weight: 700;
+    transition: 200ms linear;
+}
+
+#popupClose:hover{
+    color: var(--textFont);
+}
+
+#popupClose:not(:hover){
+    color: rgb(0, 0, 0);
+}
+
+#popupTitle{
+    font-family: var(--titleFont);
+    font-size: var(--h1size);
+    letter-spacing: 2px;
+    color: var(--textFont);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding-left: 1vw;
+}
+
+.popupOpen{
+    animation: popupOpen var(--popupDuration) forwards;
+}
+
+.popupClose{
+    animation: popupClose var(--popupDuration) forwards;
+}
+
+@keyframes popupOpen{
+    0%{
+        opacity: 0;
+        translate: 0px 2vh;
+    }
+    100%{
+        opacity: 1;
+        translate: 0px 0px;
+    }
+}
+
+@keyframes popupClose{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        translate: 0px -2vh;
+    }
+}
+
+/* #endregion */
+
+.buttons{
+    display: flex;
+    align-items: flex-end;
+}
+
+.buttons button{
     width: 100%;
 }
